fix alignment of bottom home btn
git-svn-id: file:///var/svn/skp/trunk@171 54603a6e-7c00-409b-81b0-d312d09a75cd

--- a/web/css/scss/_home.scss
+++ b/web/css/scss/_home.scss
@@ -31,7 +31,7 @@ html.home {
 
     background: url("../img/SKP-page-home-btn-off.png") no-repeat;
     height: 112px;
-    width: 292px;
+    width: 236px;
     display: inline-block;
     text-align: center;
 
@@ -76,6 +76,10 @@ html.home {
         font-weight: normal;
         margin: 0 0 80px 0;
         padding-top: 120px;
+    }
+
+    .home-btn {
+        width: 292px;
     }
 
 }
